--- a/css/index.scss
+++ b/css/index.scss
@@ -110,8 +110,8 @@ main{
                   border: 1px solid #66BB6A;
                   color: #66BB6A;
                   border-radius: 0;
-                  padding: 5px 6px;
-                  border-radius: 5px;
+                  padding: 5px 10px;
+                  border-radius: 4px;
                 }
               } //btn-toCart
             } //info
